[gd_scene load_steps=6 format=3 uid="uid://dmbdph5cmtxye"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ap4vi"]
[ext_resource type="Texture2D" uid="uid://djwaih4al8nyk" path="res://textures/cars/bodies/4.png" id="1_krci4"]
[ext_resource type="PackedScene" uid="uid://ddk4kmi1jkiyk" path="res://scenes/thrusters/thruster_1.tscn" id="2_qpign"]
[ext_resource type="Texture2D" uid="uid://bjmwhpgkkad7w" path="res://textures/gradient_radial.tres" id="3_gg4ee"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o5g7u"]
radius = 12.0
height = 94.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
motion_mode = 1
script = ExtResource("1_ap4vi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o5g7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o5g7u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_krci4")

[node name="Thruster" parent="." instance=ExtResource("2_qpign")]
position = Vector2(-32, 8)

[node name="Thruster2" parent="." instance=ExtResource("2_qpign")]
position = Vector2(5, 8)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(25, 2)
color = Color(1, 1, 0.65098, 1)
texture = ExtResource("3_gg4ee")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(40, 2)
color = Color(1, 1, 0.65098, 1)
texture = ExtResource("3_gg4ee")

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="recovered" from="." to="." method="_on_recovered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
